refact: adjust database and repositories files and create new docs about swagger
